syntax = "proto3";


package endpoints.hellohorld.sraka;



// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
  // Can be used after authentication
  rpc SayHelloAuth (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string Name = 1;
  string Address = 2;
}

// The response message containing the greetings
message HelloReply {
  string Message = 1;
}